# CircuitPython_minihass

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CNAME  LICENSE  README.rst  README.rst.license  api.html  conftest.py  docs_requirements.txt  examples.html  genindex.html  index.html  minihass.code-workspace  objects.inv  old-pyproject.toml  optional_requirements.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  formatting.yml  release_gh.yml  sphinx.yml  tests.yml
Cybershoe_CircuitPython_minihass/: LICENSE  README.rst.license  cybershoe_minihass.py
Cybershoe_CircuitPython_minihass/docs/: conf.py  index.rst
Cybershoe_CircuitPython_minihass/examples/: minihass_simpletest.py
_static/: favicon.ico.license
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst  index.rst.license  requirements.txt
docs/source/: api.rst  conf.py  index.rst  minihass.rst  modules.rst
minihass/: __init__.py  _validators.py  binary_sensor.py  const.py  device.py  entity.py  minihass.py  sensor.py
notes/: entity schemas  ideas.txt  mqtt schema.xlsx  sensor parameters.txt  ~$mqtt schema.xlsx
tests/: test_binary_sensor.py  test_device.py  test_entity.py  test_minihass.py  test_validators.py
